# 3.11

1/GreeterLibrary/: GreeterLibrary.sln
1/GreeterLibrary/GreeterLibrary/: Greeter.cpp  Greeter.h  GreeterLibrary.vcxproj
1/GreeterLibrary/Project1/: Project1.vcxproj
1/GreeterLibrary/main/: main.cpp  main.vcxproj
2/ClienLeaver/: ClienLeaver.vcxproj  main.cpp
2/LeaverProject/: LeaverProject.sln
2/LeaverProject/DynamicLib/: DynamicLib.vcxproj  Leaver.h
3/: CMakeLists.txt  Leaver.cpp  Leaver.h  main.cpp
4/FiguresDLL/: FiguresDLL.sln
4/FiguresDLL/Client/: Client.cpp  Client.vcxproj
4/FiguresDLL/FiguresDLL/: EqualSideRectangle.h  EqualSideTriangle.h  ErrorHandler.h  FiguresDLL.vcxproj  FiguresDLL.vcxproj.filters  Parallelogramm.h  Rectangle.h  StrengthTriangle.h  TwoEqualTriangle.h  figure.h  romb.h  square.h  triangle.cpp  triangle.h
5/: CMakeLists.txt  Client.cpp  EqualSideRectangle.cpp  EqualSideRectangle.h  EqualSideTriangle.h  ErrorHandler.h  Rectangle.h  TwoEqualTriangle.h  figure.h  romb.h  square.cpp
